[gd_scene load_steps=4 format=3 uid="uid://cm260q04n4urt"]

[ext_resource type="Texture2D" uid="uid://iireifth47i2" path="res://assets/ui/PanelLarge.png" id="1_esxkt"]
[ext_resource type="Script" uid="uid://gws0sfiqrhuu" path="res://scripts/player_stats.gd" id="2_h5p2b"]
[ext_resource type="Theme" uid="uid://b007pb701cwk5" path="res://themes/basic_titles.tres" id="2_ti6ne"]

[node name="PlayerStats" type="NinePatchRect"]
texture_filter = 3
offset_top = -1.0
offset_right = 140.0
offset_bottom = 119.0
texture = ExtResource("1_esxkt")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
script = ExtResource("2_h5p2b")

[node name="PlayerRocks" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 22.0
offset_top = 47.0
offset_right = 175.0
offset_bottom = 87.0
theme = ExtResource("2_ti6ne")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 40
text = "rks: 99"
scroll_active = false
autowrap_mode = 0

[node name="PlayerPoints" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 23.0
offset_top = 75.0
offset_right = 175.0
offset_bottom = 115.0
theme = ExtResource("2_ti6ne")
theme_override_font_sizes/bold_italics_font_size = 15
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 40
text = "pts: 99"
scroll_active = false
autowrap_mode = 0

[node name="PlayerSprite" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 29.0
offset_top = 32.0
offset_right = 29.0
offset_bottom = 32.0
